# serde-orm

./: Cargo.toml  db.db3
src/: common.rs  de.rs  domain.rs  main.rs  ser.rs
tests/: integration_tests.rs
tests/common/: domain.rs
