[package]
name = "serde_orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erased-serde = { version = "0.3", default-features = false, features = ["alloc"] }
inventory = "0.3"
once_cell = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive", "rc"] }
serde_yaml = "0.9.16"
